@@ -14,14 +14,28 @@
 #include <dirent.h>
 #include <errno.h>
 #include <limits.h>
+#include <mntent.h>
 #include <sys/stat.h>
 #include <sys/wait.h>
+
+static int mtab_is_symlink(void)
+{
+    struct stat stbuf;
+
+    if (lstat(_PATH_MOUNTED, &stbuf) != -1 && S_ISLNK(stbuf.st_mode))
+        return 1;
+    else
+        return 0;
+}
 
 int fuse_mnt_add_mount(const char *progname, const char *fsname,
                        const char *mnt, const char *type, const char *opts)
 {
     int res;
     int status;
+
+    if (mtab_is_symlink())
+        return 0;
 
     res = fork();
     if (res == -1) {
@@ -71,6 +85,9 @@ int fuse_mnt_umount(const char *progname, const char *mnt, int lazy)
 {
     int res;
     int status;
+
+    if (mtab_is_symlink())
+        return 0;
 
     res = fork();
     if (res == -1) {
